@@ -2,6 +2,15 @@
 
         Reviewed by ggaren.
 
+        Add grammarWrapper.cpp to work around visual studio bug plaguing buildbot.
+
+        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
+        * JavaScriptCore.vcproj/JavaScriptCore/grammarWrapper.cpp: Added.
+
+2006-02-21  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by ggaren.
+
         * kjs/testkjs.cpp: #if out timeval code on win32
 
 2006-02-21  Michael Emmel  <mike.emmel@gmail.com>
